fixtures/errors/group_by_non_callable.js
const result = Object.groupBy([1, 2, 3], null);
